<resources>
    <string name="app_name">MyMiddleTest</string>
    <string name="password">密码:</string>
    <string name="admin">用户名:</string>
    <string name="editText_input">请输入用户名</string>
    <string name="editText_input_password">请输入密码</string>
    <string name="button_login">登录</string>
    <string name="imageView_login">imageViewLogin</string>
    <string name="textView_login_hint">没有账号?</string>
    <string name="textview_login_register">点此注册!</string>
    <string name="textview_app_version">不可思议的App(Version-1.0.0-alpha)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView_register">imageViewRegister</string>
    <string name="textView_register_admin">用户名:</string>
    <string name="textView_register_password">密 码:</string>
    <string name="textView_register_confirm_password">确认密码:</string>
    <string name="editText_register_confirm_password">请输入与第一次相同的密码</string>
    <string name="textView_register_hint" />
    <string name="button_register">注册</string>
    <string name="textView_login_error" />
    <string name="first_menu">FirstMenu</string>
    <string name="home_menu">HomeMenu</string>
    <string name="user_menu">UserMenu</string>
    <string name="name">用户名</string>
    <string name="name2">密码</string>
    <string name="password2">密码</string>
</resources>