<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:orientation="horizontal"

        android:layout_height="305dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:orientation="horizontal"

        android:layout_width="138dp"
        android:layout_height="300dp"
        android:autofillHints="@string/textPersonName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="307dp"
        android:gravity="center_vertical"
        android:text="@string/password2"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="303dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button" />
</LinearLayout>